# StdPairs

./: .gitignore  README.md  _doctest_environment.py  ex_ideal.txt  index.html  setup.cfg  setup.py  stdPairs.spyx  tox.ini
docs/: affinemonoid.html  api.html  conf.py  genindex.html  globalfunctions.html  index.html  install.html  monomialideal.html  objects.inv  properpair.html  search.html  searchindex.js  support.html  support.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  properpair.doctree
docs/_build/html/: genindex.html  search.html
docs/_sources/: affinemonoid.rst.txt  monomialideal.rst.txt  properpair.rst.txt  test.rst.txt
html/: genindex.html  globalfunctions.html  index.html  install.html  monomialideal.html  support.html
html/_sources/: api.rst.txt  index.rst.txt  install.rst.txt
sphinx_docs/: Makefile  conf.py  index.rst  install.rst
sphinx_docs/_build/doctrees/: affinemonoid.doctree  api.doctree  environment.pickle  globalfunctions.doctree  index.doctree  install.doctree  monomialideal.doctree  properpair.doctree  support.doctree  test.doctree
sphinx_docs/_build/html/: .buildinfo  affinemonoid.html  api.html  globalfunctions.html  objects.inv  properpair.html  search.html  searchindex.js  support.html  test.html
stdpairs/: __init__.py  _stdpairs.py  _string_interface.py  _zsolve_interface.py  affinemonoid.py  macaulay2_interface.py  monomialideal.py  properpair.py  txt_to_object.py
stdpairs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_overall.sage  test_standard_cover.sage
(+1 files in other folders)
