[metadata]
# replace with your username:
name = stdpairs
version = 1.0.1
author = Byeongsu Yu
author_email = byeongsu.yu@gmail.com
description = A library of SageMath doing symbolic computation over a monomial ideal of an affine (non-normal) semigroup ring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/byeongsuyu/StdPairs
project_urls =
    Bug Tracker = https://github.com/byeongsuyu/StdPairs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9